Revision history for Perl extension XML::LibXSLT.

1.73            Sun Oct  9 17:32:30 IST 2011
    - Possible fix for https://rt.cpan.org/Ticket/Display.html?id=71456 :
        - made the port reservation on t/14security.t for the non-existent
        URL more robust.

1.72            Thu Oct  6 13:37:13 IST 2011
    - Moved the benchmarking code under benchmark/ so it won't be indexed
    by CPAN (Tim Brody).
    - Avoid leaking memory inside extension elements by cleaning up on 
    stylesheet DESTROY (Tim Brody).
    - xsltInit() and xsltCleanupGlobals() to avoid leaking memory on 
    init/shutdown (Tim Brody).
    - Added support for stylesheet context functions via a 
    $stylesheet->register_function() method with the same arguments as 
    XML::LibXSLT->register_function(). (Tim Brody)
    - Added support for register_element() on stylesheet objects. The callback
    may leak memory though - nothing frees the _private attributes of the
    node + document owner for the passed arguments? (Tim Brody)

1.71            Sat Sep 10 20:38:23 IDT 2011
    - Fixed https://rt.cpan.org/Ticket/Display.html?id=50487 :
        - add a blacklist for libxslt-1.1.25 which has a deadlock that
        hangs a test.
    - Fixed https://rt.cpan.org/Ticket/Display.html?id=52422 :
        - Unexpected webserver dependency in test
    - Updated the version control instructions in the README to bitbucket.org.

1.70
     - fixed various bugs
     - documentation updates
     - #48247: Win32 patch kindly provided by KMX@cpan.org
     - sync with latest XML::LibXML ABI and add a compatibility check
     - do not force -lgcrypt and -lgpg-error linker flags
     - fix for attribute nodes returned by user-defined XPath functions
     - address #41542: restore internalDTD subset on the source
       document of a transformation (libxslt unlinks it)

1.68
     - fix compilation problems
     - skip exslt tests if not available
     - added XML::LibXSLT::HAVE_EXSLT() (1/0)

1.67